--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,15 +1,14 @@
 @tailwind base;
 
-/* lato-400 medium */
+/* lato-400 regular */
 @font-face {
   font-family: "Lato";
   font-display: swap;
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Lato-Regular.eot"); /* IE9 Compat Modes */
-  src: local("Lato Light"), local("Lato-Light"),
+  src: local("Lato Regular"), local("Lato-Regular"),
     url("../fonts/Lato-Regular.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/Lato-Regular.woff2") format("woff2"),
     /* Super Modern Browsers */ url("../fonts/Lato-Regular.woff") format("woff"),
     /* Modern Browsers */ url("../fonts/Lato-Regular.ttf") format("truetype");
 }
@@ -20,9 +19,8 @@
   font-style: normal;
   font-weight: 700;
   src: url("../fonts/Lato-Bold.eot"); /* IE9 Compat Modes */
-  src: local("Lato Regular"), local("Lato-Regular"),
+  src: local("Lato Bold"), local("Lato-Bold"),
     url("../fonts/Lato-Bold.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/Lato-Bold.woff2") format("woff2"),
     /* Super Modern Browsers */ url("../fonts/Lato-Bold.woff") format("woff"),
     /* Modern Browsers */ url("../fonts/Lato-Bold.ttf") format("truetype");
 }
